--- a/field-attendance.html
+++ b/field-attendance.html
@@ -17,8 +17,12 @@
             <a href="#"><img src="images/icon-history.png"></a>
         </section>
 
-        <!--&lt;!&ndash;地图部分&ndash;&gt;-->
-        <!--<section></section>-->
+        <!--地图部分-->
+        <section class="field-attendance-map">
+            <div class="map-box">
+                <img src="images/pic-application.png">
+            </div>
+        </section>
 
         <!--&lt;!&ndash;考勤详情&ndash;&gt;-->
         <!--<section></section>-->
